# intellij_rust_bug

./: Cargo.toml  README.md
entities/: Cargo.toml
entities/src/: lib.rs
entities/src/auth_token/: database_helpers.rs  mod.rs
entities/src/user/: database_helpers.rs  mod.rs  permissions.rs
src/: lib.rs
