[package]
name = "nitro_share_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3",features = ["rustls"] }
actix-service = "2"
actix-files = "0.6"
actix-cors = "0.6"
actix-multipart = "0.5"

rustls = "0.20"
rustls-pemfile = "1"
handlebars = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
# Database
entities = { path = "entities" }
migration = { path = "migration" }
sea-orm = { version = "0.11", features = ["runtime-actix-rustls", "macros", "sqlx-postgres","postgres-array"] }
sqlx = "0.6"

uuid = { version = "1" ,features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.4.1"
futures-util = "0.3.21"
enum_dispatch = "0.3.11"
auto_impl = "1.0.1"
# Log
tracing-actix-web = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
# Utils
sha2 = { version = "0.10" }
either = { version = "1.8" }
base64 = "0.21"
parking_lot = { version = "0.12" }
rand = "0.8.5"
thiserror = "1"
this_actix_error = { git = "https://github.com/wyatt-herkamp/this_actix_errors.git" }
async-trait = "0.1"

typeshare = "1.0.0"
utoipa = { version="3", features = ["actix_extras"] }
utoipa-swagger-ui = { version="3", features = ["actix-web"] }
clap = { version = "4.1.1",features = ["derive"] }
redb = { version = "0.13" , optional = true }


[profile.dev.package.tokio]
opt-level = 3
[build-dependencies]
vergen = { version = "7.0.0" }
[features]
default = [ ]

