[package]
name = "intellij_rust_bug"
version = "0.1.0"
edition = "2021"
[lib]

[dependencies]

rustls = "0.20"
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
entities = { path = "entities" }
sea-orm = { version = "0.11", features = ["runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.6", features=["runtime-tokio-rustls"] }
uuid = { version = "1" ,features = [ "v4"] }
tokio = { version = "1.25",features = ["full"] }
# Log
tracing = "0.1"
tracing-subscriber = "0.3"


