[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" ,features = ["derive"] }
sea-orm = { version = "0.11", features = ["runtime-actix-rustls","macros","postgres-array","sqlx-postgres"] }
sqlx = "0.6"
serde_json = "1.0.91"